--- a/TeX-IMISeminar-en_Vorlage/main.tex
+++ b/TeX-IMISeminar-en_Vorlage/main.tex
@@ -12,7 +12,7 @@
 headsepline,
 bibliography=totoc,
 twoside=semi,
-fleqn
+%fleqn
 ]{scrartcl}
 
 \usepackage{pgf}
@@ -153,18 +153,20 @@ In this section, the essential basics regarding BDT and RDF and their implementa
 
  The decision for a specific feature while building a BDT can greatly influence the outcome since the generated subgroups will be completely different. That is why there is a need for a way to assess the most efficient way of splitting the data. For that, the information entropy and information gain are used. The entropy describes the level of information of a variable (\ref{fig:fig3}). The information gain compares two entropies and calculates the difference. The idea is to test every attribute as a possible option for a split node and calculate which attribute would yield the highest gain in information after the split. 
 
-\begin{centering}
+   
    \begin{equation}\label{fig:fig3}
       H(X)= - \sum_{i=1}^{n}P(x_i)\log_2{P(x_i)}
    \end{equation}  
-\end{centering}
+
 
  \subsubsection{Example BDT\label{sec:sec2-1-3}}
  Given a table of sample data: \\
  
  
- \small\begin{table}[]
-   \begin{tabular}{|l|l|l|l||l|}
+ 
+   \begin{table}[]
+      \begin{center}
+         \begin{tabular}{|l|l|l|l||l|}
       \hline
       Temperature & Rain & Windy & Humidity & Go outside? \\
     \hline
@@ -196,10 +198,11 @@ In this section, the essential basics regarding BDT and RDF and their implementa
     \hline
     High& Yes & False & High & No\\
     \hline
-   \end{tabular}
+   \end{tabular}\end{center}
    \label{fig:fig5}
    \caption{A BDT can be built from a table like such.}
    \end{table}
+
 
  
  In order to decide which attribute to pick for the root node the information gain must be calculated for all of them (Temperature, Rain, Windy, and Humidity). For example splitting with Temperature would look like this: \\
@@ -227,7 +230,7 @@ Having split the data with rain, two subgroups are created (Table 2). One with a
 
 
 \small\begin{table}[H]
-   \begin{tabular}{|l|l|l|l||l|}
+   \begin{center}\begin{tabular}{|l|l|l|l||l|}
       \hline
       Temperature & Rain & Windy & Humidity & Go outside? \\
     \hline
@@ -246,12 +249,12 @@ Having split the data with rain, two subgroups are created (Table 2). One with a
     \hline
     High& Yes & False & High & No\\
     \hline
-   \end{tabular}
+   \end{tabular}\end{center}
    \label{fig:fig101}
    \end{table}
 
    \begin{table}[H]
-      \begin{tabular}{|l|l|l|l||l|}
+      \begin{center}\begin{tabular}{|l|l|l|l||l|}
       \hline
          Temperature & Rain & Windy & Humidity & Go outside? \\
        \hline
@@ -270,7 +273,7 @@ Having split the data with rain, two subgroups are created (Table 2). One with a
       \hline
       Low&  No& True& High & Yes\\
       \hline
-      \end{tabular}
+      \end{tabular}\end{center}
       \label{fig:fig102}
       \caption{The two generated subgroups when splitting with Rain at the root node.}
       \end{table}
